# fullstack-realtime-chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  docker-compose.yaml
typhoon-be/: alembic.ini  env.sample  pyproject.toml
typhoon-be/alembic/: env.py
typhoon-be/alembic/versions/: 4e7585527e27_initial_database.py  82c39dd3bcf6_add_supported_llm_model.py
typhoon-be/src/: app.py  config.py  models.py
typhoon-be/src/io/: postgresql.py
typhoon-be/src/llmlib/: chatopenai.py  tokenizer.py
typhoon-be/src/routers/: llmchat.py  llmdetails.py  registering.py  userdetails.py
typhoon-fe/: .gitignore  env.development.local.example  middleware.ts  package-lock.json  package.json
typhoon-fe/app/: layout.tsx  page.tsx
typhoon-fe/app/api/auth/[...nextauth]/: route.ts
typhoon-fe/app/api/chatsessions/[session_id]/messages/: route.ts
typhoon-fe/app/api/llm/chat/: route.ts
typhoon-fe/app/api/llm/params/: route.ts
typhoon-fe/app/api/messages/preference/: route.ts
typhoon-fe/app/api/messages/register/: route.ts
typhoon-fe/app/api/users/[email]/chat_sessions/: route.ts
typhoon-fe/app/api/users/register/: route.ts
typhoon-fe/app/components/: authsessionprovider.component.tsx  navbar.component.tsx
typhoon-fe/app/components/chat/: chatbox.component.tsx  history.component.tsx  llmname.component.tsx  message.component.tsx  params.component.tsx
typhoon-fe/stores/: statestore.ts
