[project]
name = "typhoon-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.2.12",
    "langchain>=0.3.12",
    "langgraph>=0.2.59",
    "python-dotenv>=1.0.1",
    "sqlalchemy[postgresql-asyncpg,postgresql-psycopg2binary]>=2.0.36",
    "uvicorn>=0.33.0",
    "sse-starlette>=2.1.3",
    "transformers>=4.47.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pylint>=3.3.2",
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pylint."MASTER"]
ignore = [
    "alembic",
]
